all: added html_crawler component and added support for crawlers within scraper

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Hidden files and directories
+.idea
+**/*~
+**/*.log
+**/.DS_Store
+**/Thumbs.db
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -12,4 +19,10 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+dev_vendor/
+
+# Docker data volumes
+compose/*/data
+
+# Environment file
+.env
