--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  go: # TODO: Add environment section with scraper worker counts + command for api/webhooks, remove entrypoint tail f?
+  go:
     build:
       context: .
       dockerfile: ./compose/go/Dockerfile
@@ -10,6 +10,7 @@ services:
       MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
       MONGODB_URI: ${MONGO_INITDB_URI}
       GOPHERVISOR_CRAWLER_WORKER_COUNT: ${GOPHERVISOR_CRAWLER_WORKER_COUNT}
+      HTTP_TEST_SERVER_PORT: ${HTTP_TEST_SERVER_PORT}
     volumes:
       - .:/src/gro-crop-scraper
       - /src/gro-crop-scraper/compose
