--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,7 @@
 # Go
 GOPHERVISOR_CRAWLER_WORKER_COUNT=10
+GOPHERVISOR_FILTER_WORKER_COUNT=3
+HTTP_TEST_SERVER_PORT=8080
 
 # Mongodb
 MONGO_INITDB_DATABASE=gro_crop_scraper
